# spyde

./: .buildinfo  .gitignore  AUDIT_defensive_code.md  CLAUDE.md  CLEANUP.md  DIFFRACTION_VECTORS_PLAN.md  DISTRIBUTION_PLAN.md  LOGGING.md  NEURAL_INTEGRATION_PLAN.md  NOTEBOOK_PARITY_PLAN.md  ORIENTATION_MAPPING_PLAN.md  README.md  RELEASING.md  ROADMAP.md  VECTOR_ORIENTATION_MAPPING_PLAN.md  WALKTHROUGH_PRESENTATION_FIXES.md  benchmark_3nm_spots_results.md  benchmarks.md  build.ps1  create_shortcut.ps1  crucible.toml  genindex.html  help.html  index.html  intro.html  main.py  objects.inv  package.json  pyproject.toml  search.html  searchindex.js  sg_execution_times.html
.github/workflows/: build.yml  doc.yml  prepare_release.yml  release.yml  verify_signing_secrets.yml
_downloads/0acef8ef89545a96a1dfe32eb71ba87a/: editing_axes.ipynb
_downloads/23412b4b56118e0534c97fda5925e7f2/: opening_data.ipynb
_downloads/c5d965547b824d704b192438c34cb642/: navigating_with_selectors.py
_downloads/cc578765a7f1c3d399d4b30c554626dd/: navigating_with_selectors.ipynb
_sources/: help.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/dev_guide/: index.rst.txt  performance.rst.txt
_sources/examples/: index.rst.txt
_sources/user_guide/: gui_elements.rst.txt  index.rst.txt  installing.rst.txt
despy/: __init__.py  conftest.py  main_window.py  metadata_widget.yaml  pyproject.toml  signal_tree.py  toolbars.yaml
despy/actions/: base.py
despy/actions/hyper_signal_actions/: signal2d.yaml
despy/drawing/: multiplot.py  plot.py  plot_states.py  selector.py  update_functions.py
despy/drawing/toolbars/: __init__.py  caret_group.py  floating_button_trees.py  plot_control_toolbar.py  rounded_toolbar.py
despy/misc/: dialogs.py  utils.py
despy/misc/dialogs/: __init__.py  dialogs.py  movie_export.py
despy/tests/: test_create_data.py
despy/workers/: plot_update_worker.py
dev_guide/: index.html  performance.html
doc/: conf.py  index.rst  intro.rst  qt_scrapper.py
doc/dev_guide/: performance.rst
doc/user_guide/: gui_elements.rst  index.rst  installing.rst
docs/: future_tasks.md
docs-site/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs-site/src/: DocsApp.tsx  main.tsx
electron/: .gitignore  PACKAGING.md  SIGNING.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  tsconfig.web.json
electron/scripts/: bundle-python.mjs
electron/tests/: README.md  _harness.cjs  _probe_fv_stall.spec.ts  actions_lifecycle.spec.ts  app_log.spec.ts  axes_labels_verify.spec.ts  binary_pixel_transport.spec.ts  binary_transport.spec.ts  breadcrumb_header.spec.ts  center_zero_beam.spec.ts  close_cancels_compute.spec.ts  composition.spec.ts  console_math.spec.ts  console_preview.spec.ts  dask_monitor.spec.ts  distfix_help_raw.spec.ts  docs_embed.spec.ts  download_toast.spec.ts  env_setup_overlay.spec.ts  find_vectors_result.spec.ts  find_vectors_workflow.spec.ts  first_paint_probe.spec.ts  first_paint_real_load.spec.ts  first_run.spec.ts  fv_neural_calibration.spec.ts  fv_neural_wizard.spec.ts  gpu_image_parity.spec.ts  guide_drive.spec.ts  guide_screenshots.spec.ts  insitu_playback.spec.ts  ipf_key.spec.ts  ipf_perf.spec.ts  ipf_refine_render.spec.ts  ipf_render.spec.ts  loading.spec.ts  mdi_layout.spec.ts  mdi_overlay.spec.ts  movie_editor.spec.ts  movie_export.spec.ts  movie_nav_scrub.spec.ts  (+64 more)
examples/: README.rst  index.html  sg_execution_times.html
examples/general/: README.rst  editing_axes.html  editing_axes.py  index.html  navigating_with_selectors.html  navigating_with_selectors.py  opening_data.html  opening_data.py  sg_execution_times.html
guides/: find-vectors.ts  index.ts  markdown.tsx  orientation.ts  spectroscopy.ts  strain.ts  types.ts  virtual-imaging.ts  welcome.ts
installer/: launch.py  spyde.nsi
scripts/: update-download-links.mjs
spyde/: __init__.py  __main__.py  _build_info.py  _version.py  api.py  compute_backend.py  compute_dispatch.py  conftest.py  dask_manager.py  dock_manager.py  gpu_setup.py  hyperspy_extension.yaml  icon.icns  logging_config.py  main_window.py  mdi_manager.py  metadata_extract.py  metadata_widget.yaml  nav_sidecar.py  qt_scrapper.py  signal_node.py  signal_tree.py  toolbars.yaml  updater.py
spyde.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
spyde/actions/: README.md  _common.py  _template_action.py  action.py  base.py  center_zero_beam.py  commit.py  composition.py  context.py  fft_action.py  figure_registry.py  find_vectors.py  find_vectors_action.py  find_vectors_gpu.py  find_vectors_neural.py  find_vectors_pipeline.py  find_vectors_torch.py  gpu_status.py  index_and_calibrate.py  ipf_density.py  ipf_refine.py  ipf_refine_render.py  ipf_view.py  lifecycle.py  line_profile.py  line_profile_action.py  masks.py  navigator_views.py  orientation_action.py  orientation_compute.py  overlay.py  playback.py  pyxem.py  registry.py  sem_geometry.py  strain_action.py  strain_display.py  strain_mapping.py  vector_orientation.py  vector_orientation_action.py  (+7 more)
spyde/backend/: _session_actions.py  _session_axes.py  _session_files.py  _session_testharness.py  _session_windows.py  app.py  compute_config.py  console.py  console_preview.py  dask_stats.py  debug_flags.py  example_download.py  heavy_imports.py  ipc.py  log_stream.py  process_guard.py  session.py  tutorial_data.py
spyde/drawing/: colormaps.py  live_overlay.py  multiplot.py  plot.py  plot_managers.py  plot_states.py  selector.py  signal_tree_presenter.py  update_functions.py
spyde/live/: camera_control_widget.py  control_dock_widget.py  microscope_control_widget.py  particle_scanning.py  reference_control_widget.py  stage_control_widget.py  stem_control_widget.py
spyde/misc/: drift_correction.py  (+1 more)
tools/: analyze_footer.py  build_installer_payload.py  build_linux_appimage.py  build_macos_app.py  inject_icon.py  scan_logger_shadow.py  write_build_info.py  write_manifest.py
user_guide/: gui_elements.html  index.html  installing.html
(+386 files in other folders)
