[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Direct Electron"}]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20.0",
    "pillow",
    "matplotlib",
    "scipy",
    "bokeh",
    "scikit-image",
    "sympy",
    "distributed",
    "dask",
    "hyperspy@git+https://github.com/cssfrancis/hyperspy.git@slice-integrate2",
    "rosettasciio@git+https://github.com/cssfrancis/rosettasciio.git@improve_mrc",
    "pyxem",
    "PySide6",
    "imageio-ffmpeg",
    "pyqtgraph",
    "imagecodecs",
]
description = "DE Visualization tool based on HyperSpy"
version = "0.0.1"
keywords = [
    "EELS",
    "STEM",
    "TEM",
    "hyperspy",
    "microscopy",
    "Cryo EM",
    "4D STEM",
]
name = "spyde"
requires-python = ">=3.10"

[tool.uv]
# When running via the PyCrucible launcher, install only core dependencies —
# never optional extras (tests / doc) which aren't needed at runtime.
extra-index-url = []

[tool.pycrucible]
entrypoint = "main.py"

[tool.pycrucible.patterns]
include = [
    "main.py",
    "spyde/**/*.py",
    "spyde/**/*.yaml",
    "spyde/**/*.png",
    "spyde/**/*.ico",
    "spyde/**/*.icns",
    "spyde/**/*.svg",
]
exclude = [
    ".venv/**/*",
    ".venv2/**/*",
    "**/__pycache__/**",
    ".git/**/*",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.pyd",
    "spyde/tests/**/*",
    "spyde.egg-info/**/*",
    "doc/**/*",
    "examples/**/*",
    "dist/**/*",
]

[tool.setuptools.packages.find]
include = ["spyde*", "spyde.*"]
where = ["."]

[tool.setuptools.package-data]
spyde = [
    "*.yaml",
    "*.png",
    "*.ico",
    "*.icns",
    "*.svg",
    "qt/assets/icons/*.svg",
    "actions/hyper_signal_actions/*.yaml",
    "actions/plot_actions/*.yaml",
]

[project.optional-dependencies]
tests = [
    "pytest-instafail",
    "pytest-rerunfailures",
    "pytest>=3.6",
    "setuptools_scm",
    "pytest-cov",
    "pytest-qt",
    "sphinx_gallery",
    "tifffile",
]
doc = [
    "sphinx",
    "pydata_sphinx_theme",
    "sphinx-gallery",
    "pytest-qt",
    "sphinx_design",
]

[project.urls]
"Bug Reports" = "https://github.com/directelectron/spyde/issues"
Documentation = "https://directelectron.github.io/spyde/"
Homepage = "https://directelectron.com/"
Support = "https://github.com/directelectron/spyde/discussions"
Source = "https://github.com/directelectron/spyde"

[project.scripts]
spyde = "spyde.__main__:main"
