[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Direct Electron"}]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20.0",
    "pillow",
    "matplotlib",
    "scipy",
    "bokeh",
    "scikit-image",
    "sympy",
    "distributed",
    "dask",
    "hyperspy@git+https://github.com/cssfrancis/hyperspy.git@slice-integrate2",
    "rosettasciio@git+https://github.com/cssfrancis/rosettasciio.git@win32-binary-read",
    "pyxem",
    "imageio-ffmpeg",
    "imagecodecs",
    "psygnal>=0.10.0",
    "anyplotlib@git+https://github.com/CSSFrancis/anyplotlib.git@main",
    "pyyaml",
    # GPU-accelerated batched compute (vector orientation mapping, etc.).
    "torch",
]
description = "DE Visualization tool based on HyperSpy"
version = "0.0.1"
keywords = [
    "EELS",
    "STEM",
    "TEM",
    "hyperspy",
    "microscopy",
    "Cryo EM",
    "4D STEM",
]
name = "spyde"
requires-python = ">=3.10"

[tool.uv]
# When running via the PyCrucible launcher, install only core dependencies —
# never optional extras (tests / doc) which aren't needed at runtime.
extra-index-url = []
# Auto-select the right torch wheel per platform/hardware: CUDA index on
# Windows/Linux with an NVIDIA GPU, CPU wheel otherwise, MPS-capable default
# wheel on macOS arm64. This is what gets the dist build a GPU-enabled torch
# instead of the CPU-only default PyPI wheel. (uv >= 0.5 honours this; the
# `uv pip install --torch-backend=auto` flag is the manual equivalent.)
torch-backend = "auto"

[tool.pycrucible]
entrypoint = "main.py"

[tool.pycrucible.patterns]
include = [
    "main.py",
    "spyde/**/*.py",
    "spyde/**/*.yaml",
    "spyde/**/*.png",
    "spyde/**/*.ico",
    "spyde/**/*.icns",
    "spyde/**/*.svg",
]
exclude = [
    ".venv/**/*",
    ".venv2/**/*",
    "**/__pycache__/**",
    ".git/**/*",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.pyd",
    "spyde/tests/**/*",
    "spyde.egg-info/**/*",
    "doc/**/*",
    "examples/**/*",
    "dist/**/*",
]

[tool.setuptools.packages.find]
include = ["spyde*", "spyde.*"]
where = ["."]

[tool.setuptools.package-data]
spyde = [
    "*.yaml",
    "*.png",
    "*.ico",
    "*.icns",
    "*.svg",
    "drawing/toolbars/icons/*.svg",
    "actions/hyper_signal_actions/*.yaml",
    "actions/plot_actions/*.yaml",
]

[project.optional-dependencies]
tests = [
    "pytest-instafail",
    "pytest-rerunfailures",
    "pytest>=3.6",
    "setuptools_scm",
    "pytest-cov",
    "playwright>=1.40.0",
    "sphinx_gallery",
    "tifffile",
]
doc = [
    "sphinx",
    "pydata_sphinx_theme",
    "sphinx-gallery",
    "sphinx_design",
]

[project.urls]
"Bug Reports" = "https://github.com/directelectron/spyde/issues"
Documentation = "https://directelectron.github.io/spyde/"
Homepage = "https://directelectron.com/"
Support = "https://github.com/directelectron/spyde/discussions"
Source = "https://github.com/directelectron/spyde"

[project.scripts]
spyde = "spyde.__main__:main"

# Registers spyde/hyperspy_extension.yaml so HyperSpy knows the SpyDE signal
# types (e.g. DiffractionVectorsImage). Requires a reinstall to take effect:
# `pip install -e .`
[project.entry-points."hyperspy.extensions"]
spyde = "spyde"

[tool.pytest.ini_options]
# The single canonical Qt-free pytest suite for the Electron/anyplotlib backend.
# (The legacy pytest-qt tests were retired: the dead ones deleted, the unique
# compute/contract nets consolidated here; sped_ag timing lives in benchmark_*.py,
# run manually. The Playwright suite under electron/ covers the UI.)
testpaths = ["spyde/tests/migrated"]
markers = [
    "gpu: tests requiring a physical NVIDIA GPU",
    "slow: slow tests (e.g. real template-library generation)",
]
