[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Direct Electron"}]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
    "numpy>=1.20.0",
    "pillow",
    "matplotlib",
    "scipy",
    "bokeh",
    "scikit-image",
    "sympy",
    "distributed",
    "dask",
    "hyperspy@git+https://github.com/cssfrancis/hyperspy.git@f314cf42aa16a06d82449cd8dc8c8f57df2e3e72",
    # Upstream PyPI rosettasciio (was a cssfrancis fork whose only delta was an
    # MRC-read speed/memory optimisation — see git history). Dropped the fork so
    # the installer no longer needs to git-clone it; large .mrc files just read
    # via the stock memmap path instead of the fork's chunked-run reader. The
    # [hdf5,image] extras cover .hspy / .tif reading (hyperspy pins the same).
    "rosettasciio[hdf5,image]>=0.14.0",
    "pyxem",
    "imageio-ffmpeg",
    "imagecodecs",
    "psygnal>=0.10.0",
    "anyplotlib>=0.3.0",
    "pyyaml",
    # GPU-accelerated batched compute (vector orientation mapping, etc.).
    "torch",
]
description = "DE Visualization tool based on HyperSpy"
dynamic = ["version"]
license = {text = "GPL-3.0-or-later"}
keywords = [
    "EELS",
    "STEM",
    "TEM",
    "hyperspy",
    "microscopy",
    "Cryo EM",
    "4D STEM",
]
name = "spyde"
# Upper bound is load-bearing for the SHIPPED app, not just a courtesy: with an
# open bound uv installs the newest CPython on a fresh machine (it grabbed 3.14),
# for which the CUDA torch wheels (cp310–cp313) don't exist → first-launch
# `uv sync` fails. Cap below 3.14 and ship a `.python-version` (= 3.12) so the
# managed env resolves an interpreter every dependency has wheels for.
requires-python = ">=3.10,<3.14"

[tool.uv]
# When running via the PyCrucible launcher, install only core dependencies —
# never optional extras (tests / doc) which aren't needed at runtime.
extra-index-url = []
# Auto-select the right torch wheel per platform/hardware: CUDA index on
# Windows/Linux with an NVIDIA GPU, CPU wheel otherwise, MPS-capable default
# wheel on macOS arm64. This is what gets the dist build a GPU-enabled torch
# instead of the CPU-only default PyPI wheel. (uv >= 0.5 honours this; the
# `uv pip install --torch-backend=auto` flag is the manual equivalent.)
torch-backend = "auto"

# Explicit PyTorch CUDA wheel index. torch-backend="auto" wasn't selecting CUDA at
# LOCK time on this box (it fell back to the CPU PyPI wheel), so pin torch's source to
# the CUDA index directly — this survives `uv run`'s re-sync. cu124 wheels still ship
# sm_61 (Pascal / TITAN X), so the GPU tile backend works on this dev machine.
# The index is win32-only: it publishes no macOS wheels (CI mac runners must fall
# back to the default PyPI torch), and Linux CI keeps the PyPI wheel it always had.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
# anyplotlib is co-developed in the sibling checkout but resolved from PyPI
# (releases track this repo's needs). While an unreleased anyplotlib feature is
# in flight, pin a git sha in [project.dependencies] (the hyperspy/rosettasciio
# pattern). When actively editing anyplotlib locally, temporarily re-add the
# editable path override below (do NOT commit it — the path doesn't exist on CI
# runners and breaks `uv sync --frozen`):
# anyplotlib = { path = "../anyplotlib", editable = true }

[tool.pycrucible]
entrypoint = "main.py"

[tool.pycrucible.patterns]
include = [
    "main.py",
    "spyde/**/*.py",
    "spyde/**/*.yaml",
    "spyde/**/*.png",
    "spyde/**/*.ico",
    "spyde/**/*.icns",
    "spyde/**/*.svg",
    "spyde/models/weights/*.pt",
    "spyde/models/weights/registry.json",
]
exclude = [
    ".venv/**/*",
    ".venv2/**/*",
    "**/__pycache__/**",
    ".git/**/*",
    "**/*.pyc",
    "**/*.pyo",
    "**/*.pyd",
    "spyde/tests/**/*",
    "spyde.egg-info/**/*",
    "doc/**/*",
    "examples/**/*",
    "dist/**/*",
]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"

[tool.setuptools.packages.find]
include = ["spyde*", "spyde.*"]
where = ["."]

[tool.setuptools.package-data]
spyde = [
    "*.yaml",
    "*.png",
    "*.ico",
    "*.icns",
    "*.svg",
    "drawing/toolbars/icons/*.svg",
    "models/weights/*.pt",
    "models/weights/registry.json",
]

[project.optional-dependencies]
tests = [
    "pytest-instafail",
    "pytest-rerunfailures",
    "pytest-timeout",
    "pytest>=3.6",
    "setuptools_scm",
    "pytest-cov",
    "playwright>=1.40.0",
    "sphinx_gallery",
    "tifffile",
]
doc = [
    "sphinx",
    "pydata_sphinx_theme",
    "sphinx-gallery",
    "sphinx_design",
]

[project.urls]
"Bug Reports" = "https://github.com/directelectron/spyde/issues"
Documentation = "https://directelectron.github.io/spyde/"
Homepage = "https://directelectron.com/"
Support = "https://github.com/directelectron/spyde/discussions"
Source = "https://github.com/directelectron/spyde"

[project.scripts]
spyde = "spyde.__main__:main"

# Registers spyde/hyperspy_extension.yaml so HyperSpy knows the SpyDE signal
# types (e.g. DiffractionVectorsImage). Requires a reinstall to take effect:
# `pip install -e .`
[project.entry-points."hyperspy.extensions"]
spyde = "spyde"

[tool.pytest.ini_options]
# The single canonical Qt-free pytest suite for the Electron/anyplotlib backend.
# (The legacy pytest-qt tests were retired: the dead ones deleted, the unique
# compute/contract nets consolidated here; sped_ag timing lives in benchmark_*.py,
# run manually. The Playwright suite under electron/ covers the UI.)
testpaths = ["spyde/tests/migrated"]
addopts = "--strict-markers"
markers = [
    "gpu: tests requiring a physical NVIDIA GPU",
    "slow: slow tests (e.g. real template-library generation)",
    "network: tests that make a live network request (e.g. COD lookup)",
]
